--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="container" id="form-container">
         <h1>Créer un compte</h1>
-
+        <!--test de peline-->
         <form id="register-form">
             <label>Prénom :</label>
             <input type="text" id="prenom" required>
